<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Case Study</string>

    <string name="info_no_matching_results">No Results</string>
    <string name="info_no_results">No Matching Search Results</string>
    <string name="info_no_favorite">No Favorite Found !</string>
    <string name="info_no_result">No Matching Search Results !</string>
    <string name="info_search_done">Search Done</string>
    <string name="content_description_more_info_arrow">View Details</string>
    <string name="hint_name">Character Name</string>
    <string name="title_favorites">Favorites</string>
    <string name="menu_title_favorites">Favorites</string>
    <string name="info_explore">StarWars</string>
    <string name="info_removed_from_favs">Removed From Favorites</string>
    <string name="info_added_to_favs">Added To Favorites</string>
    <string name="menu_title_settings">Settings</string>
    <string name="title_birth_year">Birth Year</string>
    <string name="title_height">Height</string>
    <string name="title_planet">Planet</string>
    <string name="title_films">Films</string>
    <string name="title_species">Species</string>
    <string name="info_loading_complete">Loaded Successfully :)</string>
    <string name="info_specie_information_unavailable">Specie information unavailable</string>
    <string name="info_films_information_unavailable">Films information unavailable</string>
    <string name="info_planet_information_unavailable">Planet information unavailable</string>
    <string name="error_loading_films">Error Loading Films</string>
    <string name="error_loading_planet"> Error Loading Planet</string>
    <string name="error_loading_specie">Error Loading Specie</string>
    <string name="template_planet_name">Name : %s</string>
    <string name="template_planet_population">Population : %,d</string>
    <string name="template_species_name">Name : %s</string>
    <string name="template_height_cm">%s cm</string>
    <string name="template_height_inches">%s inches</string>
    <string name="template_species_language">Language : %s</string>
    <string name="error_check_internet_connection">Check Internet Connection</string>
    <string name="error_oops_error_occured">Oops! An Error Occurred</string>
    <string name="error_loading_details">Couldn\'t load character details</string>
    <string name="back_to_home_dashboard_content_desc">Back to home dashboard</string>


</resources>
