<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <merge>

        <TextView
            android:id="@+id/details_films_title_text_view"
            style="@style/TextView.HeadLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:drawableStart="@drawable/ic_film_24dp"
            android:text="@string/title_films"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/specie_card_container" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/films_card_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="0dp"
            app:cardElevation="@dimen/cardview_elevation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_films_title_text_view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
               android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/details_films_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_film" />
                <TextView
                    android:id="@+id/no_films_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_films_information_unavailable"
                    android:textAlignment="center"
                    android:visibility="invisible"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/films_progress_bar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/films_error_text_view"
                    style="@style/TextView.Error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:text="@string/error_loading_films"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </merge>
</layout>