<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>
        <variable
            name="planet"
            type="com.amrmustafa.casestudy.models.PlanetPresentation" />
    </data>

    <merge xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

        <TextView
            android:id="@+id/details_planet_title_text_view"
            style="@style/TextView.HeadLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:drawableStart="@drawable/ic_planet_24dp"
            android:text="@string/title_planet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_height_in_inches_text_view" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/planet_card_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            app:cardCornerRadius="0dp"
            app:cardElevation="@dimen/cardview_elevation"
            app:layout_constraintTop_toBottomOf="@+id/details_planet_title_text_view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:background="@drawable/bg_view"
                android:padding="@dimen/padding_default">
                <TextView
                    android:id="@+id/no_planet_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_planet_information_unavailable"
                    android:textAlignment="center"
                    android:visibility="invisible"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/details_planet_name_text_view"
                    style="@style/TextView.Info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.format(@string/template_planet_name,planet.name)}"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Language : Blaa Blaa" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/details_planet_population_text_view"
                    style="@style/TextView.Info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.format(@string/template_planet_population,planet.population)}"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_planet_name_text_view"
                    tools:text="Population : 2340000" />

                <ProgressBar
                    android:id="@+id/planet_progress_bar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/planet_error_text_view"
                    style="@style/TextView.Error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:text="@string/error_loading_planet"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </merge>
</layout>